syntax = "proto3";

option java_multiple_files = true;
option java_package = "br.com.zup.edu";
option java_outer_classname = "KeyManagerGrpc";
option objc_class_prefix = "HLW";

package br.com.zup.edu;

service KeyManagerGrpcService {
  rpc registerKey(GrpcRegisterPixKeyRequest) returns (GrpcRegisterPixKeyResponse) {}
}

enum GrpcKeyType {
  CPF = 0;
  PHONE = 1;
  EMAIL = 2;
  RANDOM_KEY = 3;
}

enum GrpcAccountType {
  CONTA_CORRENTE = 0;
  CONTA_POUPANCA = 1;
}

message GrpcRegisterPixKeyRequest {
  string clientId = 1;
  GrpcKeyType type = 2;
  string value = 3;
  GrpcAccountType accountType = 4;
}

message  GrpcRegisterPixKeyResponse {
  string pixId = 1;
}
